fix(ons-icon): fix alignment in ons-fab

--- a/core/css/icon.css
+++ b/core/css/icon.css
@@ -17,6 +17,7 @@ limitations under the License.
 
 .ons-icon {
   display: inline-block;
+  line-height: inherit;
   font-style: normal;
   font-weight: normal;
   -webkit-font-smoothing: antialiased;
